--- a/Extension/manifest.json
+++ b/Extension/manifest.json
@@ -2,8 +2,16 @@
 	"manifest_version": 2,
 	"name": "Deepfake Detector",
 	"description": "To detect deepfakes in celebrities",
-	"version": "1.0.0",
+	"version": "0.2",
 	"icons": {"128": "icon_128.png"},
+	"content_scripts":[
+		{
+			"matches": [
+				"<all_urls>"
+			],
+			"js": ["content.js"]
+		}
+	],
 	"browser_action": {
 		"default_icon": "icon.png",
 		"default_popup": "popup.html"
