--- a/Extension_v2/manifest.json
+++ b/Extension_v2/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Don't Be Fake",
-  "description": "Scans online videos to identify Deepfake videos",
+  "name": "DeFake Video Scanner",
+  "description": "Scans Videos for Deep Fakes",
   "version": "1.0",
   "manifest_version": 2,
   "permissions": ["alarms", "notifications", "storage"],
@@ -9,7 +9,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Drink Water Event",
+    "default_title": "DeFake",
     "default_popup": "popup.html"
   },
   "icons": {
